--- a/assets/minecraft/blockstates/snow.json
+++ b/assets/minecraft/blockstates/snow.json
@@ -1,21 +1,21 @@
 {
   "variants": {
     "layers=1": [
-      { "model": "minecraft:block/snow_height2", "weight": 90 },
-	  { "model": "minecraft:block/snow_height2_alt", "weight": 10 }
+      { "model": "minecraft:block/normal_rail", "weight": 90 },
+	  { "model": "minecraft:block/normal_rail_alt", "weight": 10 }
 	],
     "layers=2": [
-      {"model": "minecraft:block/snow_height2", "weight": 90, "y": 90},
-	  {"model": "minecraft:block/snow_height2_alt", "weight": 10, "y": 90}
+      {"model": "minecraft:block/normal_rail", "weight": 90, "y": 90},
+	  {"model": "minecraft:block/normal_rail_alt", "weight": 10, "y": 90}
 	],
     "layers=3": {
-      "model": "minecraft:block/snow_height3"
+      "model": "minecraft:block/normal_rail_crossing"
     },
     "layers=4": {
-      "model": "minecraft:block/snow_height8"
+      "model": "minecraft:block/normal_rail_crossing", "y": 90
     },
     "layers=5": {
-      "model": "minecraft:block/snow_height10"
+      "model": "minecraft:block/normal_rail_slope"
     },
     "layers=6": {
       "model": "minecraft:block/rails_concrete"
